VSE: Regression - strip height has been limited #91724

Closed
opened 2021-09-26 13:37:16 +02:00 by tintwotin · 17 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.59

Blender Version
Broken: version: 3.0.0 Alpha, branch: master (modified), commit date: 2021-09-24 11:38, hash: 2b9ca0f112

Short description of error
Strip height has been limited in 3.0. Afaik is this not an announced or discussed changed. So, it seems to be a regression.

A higher strip height(than currently in 3.0) can be necessary when exiting ex. waveforms or color grading. Also, in the current state it is not possible to just have one channel of high thumbnails displayed.

A comparison of max strip height between 2.93 and 3.0:
{F10607693, size=full}

This is quite problematic since having one channel and at a much higher height is necessary for ex. using the VSE for audio playback during animation/lipsync animation or when color grading were you would typically just display one channel with video strips with thumbnails.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.59 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master (modified), commit date: 2021-09-24 11:38, hash: `2b9ca0f112` **Short description of error** Strip height has been limited in 3.0. Afaik is this not an announced or discussed changed. So, it seems to be a regression. A higher strip height(than currently in 3.0) can be necessary when exiting ex. waveforms or color grading. Also, in the current state it is not possible to just have one channel of high thumbnails displayed. A comparison of max strip height between 2.93 and 3.0: {[F10607693](https://archive.blender.org/developer/F10607693/max_height.gif), size=full} This is quite problematic since having one channel and at a much higher height is necessary for ex. using the VSE for audio playback during animation/lipsync animation or when color grading were you would typically just display one channel with video strips with thumbnails.
Author

Added subscriber: @tintwotin

Added subscriber: @tintwotin

#92946 was marked as duplicate of this issue

#92946 was marked as duplicate of this issue

Added subscriber: @iss

Added subscriber: @iss

This has been done on purpose, not sure if I mentioned this in commit though. It doesn't make much sense to be able to zoom strip to half screen. But I found this change quite limiting too, will have to find better solution or perhaps reduce maximum zoom.

I don't quite understand how this affects color grading workflow, as I don't really do it myself. Can you explain that in bit more detail?

This has been done on purpose, not sure if I mentioned this in commit though. It doesn't make much sense to be able to zoom strip to half screen. But I found this change quite limiting too, will have to find better solution or perhaps reduce maximum zoom. I don't quite understand how this affects color grading workflow, as I don't really do it myself. Can you explain that in bit more detail?
Author

When color grading you'd typically have all of the image strips in one channel, and narrow the sequencer area to only this channel is visible. These gifs shows that it is not possible to have a single channel displayed in 3.0 as it was in 2.93. And if a similar height is used the thumbnails will disappear and additional and unwanted channels will be displayed:

Current in 3.0:
{F10624629,size=full}

Before in 2.93:
{F10624484,size=full}

When color grading you'd typically have all of the image strips in one channel, and narrow the sequencer area to only this channel is visible. These gifs shows that it is not possible to have a single channel displayed in 3.0 as it was in 2.93. And if a similar height is used the thumbnails will disappear and additional and unwanted channels will be displayed: Current in 3.0: {[F10624629](https://archive.blender.org/developer/F10624629/strip_height_300.gif),size=full} Before in 2.93: {[F10624484](https://archive.blender.org/developer/F10624484/strip_height_293.gif),size=full}

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Right I see what you mean, this is pretty much same problem I have - very large preview area since I usually edit only 2 strips on top of each other, then it is not great for seeing waveform or thumbnails.

The maximum size of strips has been reduced due to thumbnails, but it makes much more sense to do this in pixels, which I don't think is possible. Will check what can be done about this, so will confirm for now.

Right I see what you mean, this is pretty much same problem I have - very large preview area since I usually edit only 2 strips on top of each other, then it is not great for seeing waveform or thumbnails. The maximum size of strips has been reduced due to thumbnails, but it makes much more sense to do this in pixels, which I don't think is possible. Will check what can be done about this, so will confirm for now.
Author

If the sequencer region is full height, it is currently not possible to make the strips really narrow:
not_narrow.gif

Seems to be adjusted to display around 32 channels, and not more.

If the sequencer region is full height, it is currently not possible to make the strips really narrow: ![not_narrow.gif](https://archive.blender.org/developer/F10634301/not_narrow.gif) Seems to be adjusted to display around 32 channels, and not more.
Author

Changed status from 'Confirmed' to: 'Archived'

Changed status from 'Confirmed' to: 'Archived'
Author

As I do not have anymore time or motivation for a continued investment in the Blender project, I'm giving up on this report for now.

As I do not have anymore time or motivation for a continued investment in the Blender project, I'm giving up on this report for now.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Archived' to: 'Confirmed'

Changed status from 'Archived' to: 'Confirmed'
Member

Sorry to hear (thx again reporting). In my opinion we should not sweep this under the carpet (esp. since this already been confirmed), there is still a chance to get this fixed in the future and others might be affected by this issue as well.
Feel free to unsubscribe though.

Sorry to hear (thx again reporting). In my opinion we should not sweep this under the carpet (esp. since this already been confirmed), there is still a chance to get this fixed in the future and others might be affected by this issue as well. Feel free to unsubscribe though.
Author

Removed subscriber: @tintwotin

Removed subscriber: @tintwotin

Added subscribers: @NCH3D, @PratikPB2123, @tintwotin, @mano-wii

Added subscribers: @NCH3D, @PratikPB2123, @tintwotin, @mano-wii

This issue was referenced by 9bdf3fa5f0

This issue was referenced by 9bdf3fa5f01b01bf9461a3ba6707d231bbbc5e9e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2021-11-17 03:12:18 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91724
No description provided.