Fix T91724: Strip height is too limited

This change was introduced in 997b5fe45dab, to not display pixelated
thumbnails. However when VSE timeline height is made smaller, this
limits strip height.

Change limit, so one strip can occupy full height of VSE timeline